--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,11 @@
     --color_li_nav: #faf9fc;
 }
 
+/*CSS body*/
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
-}
-
-.list_style {
-    list-style: none;
 }
 
 .d_flex {
@@ -29,6 +27,10 @@
     flex-flow: row wrap;
     justify-content: space-between;
     align-content: flex-start;
+}
+
+.align_center {
+    align-content: center;
 }
 
 body {
@@ -50,7 +52,9 @@ body {
     border: 2px solid black;
 }
 
-/*CSS header*/
+.list_style {
+    list-style: none;
+}
 
 header {
     background-color: var(--bg_header);
@@ -79,10 +83,6 @@ nav button a:hover {
 
 nav button:hover {
     box-shadow: 3px 3px 3px;
-}
-
-.align_center {
-    align-content: center;
 }
 
 #hero {
@@ -131,8 +131,6 @@ nav button:hover {
     background-color: var(--bg_footer);
     color: var(--primary_color);
 }
-
-/*CSS main*/
 
 .even {
     background-color: var(--bg_section);
